# data-analyst-app

./: .env.example  .gitignore  README.md  host.json  local.settings.json.example  pyproject.toml  requirements.txt
.claude/skills/: README.md  ai-agent-developer.md  backend-engineer.md  data-ingestion-engineer.md  dependencies-manager.md  frontend-ui-designer.md  security-compliance-specialist.md
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
docs/: API.md  RUNBOOK.md
history/prompts/constitution/: 001-create-financial-advisor-agent-constitution.constitution.prompt.md
history/prompts/document-ingestion/: 001-create-document-ingestion-spec.spec.prompt.md  002-design-implementation-plan.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md  005-implement-foundational-infrastructure.red.prompt.md
infrastructure/bicep/: main.bicep
infrastructure/bicep/modules/: cosmos.bicep  function_app.bicep  key_vault.bicep  service_bus.bicep  storage.bicep
infrastructure/bicep/parameters/: dev.parameters.json
infrastructure/monitoring/: alerts.bicep  setup-alerts.sh
infrastructure/monitoring/powerbi/: README.md
scripts/: generate_golden_excel.py  generate_golden_pdf.py
specs/001-document-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-document-ingestion/checklists/: requirements.md
specs/001-document-ingestion/contracts/: ingestion-api.openapi.yaml
src/ingestion/functions/: extraction_worker.py  process_ingestion.py  results_handler.py  retry_handler.py  status_handler.py  upload_handler.py  validation_worker.py
src/shared/: config.py  exceptions.py  telemetry.py
tests/integration/: test_end_to_end_excel.py  test_end_to_end_pdf.py  test_retry_logic.py
tests/unit/: test_confidence_scorer.py  test_financial_parser.py  test_number_parser.py  test_validator.py
(+24 files in other folders)
